[gd_scene load_steps=8 format=3 uid="uid://b8euiqlodlwc2"]

[ext_resource type="PackedScene" uid="uid://datfp8kxjrjg" path="res://scenes/BlueShip.tscn" id="1_7i3gt"]
[ext_resource type="Script" path="res://scenes/ObjectiveArea.gd" id="1_8twsk"]
[ext_resource type="Script" path="res://scenes/secondary_level.gd" id="1_pifqr"]
[ext_resource type="Script" path="res://scenes/PlatformBlue2.gd" id="3_5lqcr"]
[ext_resource type="PackedScene" uid="uid://y5a4e3ajuy2r" path="res://scenes/StonePlatform.tscn" id="3_lgnj6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5t85"]
size = Vector2(1191, 82)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42710"]
size = Vector2(141, 69)

[node name="SecondaryLevel" type="Node2D"]
script = ExtResource("1_pifqr")

[node name="ObjectiveArea" type="Area2D" parent="."]
script = ExtResource("1_8twsk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2(590, 39)
shape = SubResource("RectangleShape2D_n5t85")

[node name="BlueShip" parent="." instance=ExtResource("1_7i3gt")]
position = Vector2(320, 400)
inertia = 1.0
lock_rotation = true
linear_velocity = Vector2(10, 0)

[node name="PlatformBlue2" type="Area2D" parent="."]
position = Vector2(285, 565)
script = ExtResource("3_5lqcr")

[node name="StonePlatform" parent="PlatformBlue2" instance=ExtResource("3_lgnj6")]

[node name="StonePlatform2" parent="PlatformBlue2" instance=ExtResource("3_lgnj6")]
position = Vector2(70, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformBlue2"]
position = Vector2(34.5, -1.5)
shape = SubResource("RectangleShape2D_42710")

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
[connection signal="body_entered" from="PlatformBlue2" to="PlatformBlue2" method="_on_PlatformBlue2_body_entered"]
[connection signal="body_exited" from="PlatformBlue2" to="PlatformBlue2" method="_on_PlatformBlue2_body_exited"]
